# discord-bot-alastor

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.rust  LICENSE  README.md  README.rust.md  RUST_IMPLEMENTATION.md  bot.py  config.yaml  docker-compose.rust.yml  docker-compose.yml  requirements.txt
.github/workflows/: publish-docker.yml
src/: bot.py  config.py  config.rs  error.rs  main.rs  radio.rs
src/commands/: donate.py  help.py  info.py  info.rs  mod.rs  radio.py  radio.rs  setup.rs
